Adding front-end
Added some activity into app.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.edecora">
 
-
-
-
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,13 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EDecora">
+        <activity android:name=".WeddingMain"></activity>
+        <activity android:name=".AnniversaryMain" />
+        <activity android:name=".EventMain" />
+        <activity android:name=".Cart" />
+        <activity android:name=".BirthdayMain" />
         <activity
             android:name=".MyProfile"
-            android:label="@string/title_activity_my_profile">
-        </activity>
-
-
-
+            android:label="@string/title_activity_my_profile" />
         <activity android:name=".MyInformation" />
         <activity android:name=".SignInActivity">
             <intent-filter>
