--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EDecora">
-        <activity android:name=".ScrollApp"></activity>
+        <activity android:name=".CheckOut"></activity>
+        <activity android:name=".ScrollApp" />
         <activity android:name=".OtherMain" />
         <activity android:name=".FestivalMain" />
         <activity android:name=".WeddingMain" />
@@ -28,9 +29,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" >
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
